Esercizi e Laboratori/Esercizi e Laboratori/2017 - 2018/WorkSpaceEclipseEsercizi/.metadata/.plugins/org.eclipse.cdt.ui/s11es2_PatternMatch&CutV3.build.log
21:58:23 **** Rebuild of configuration Debug for project s11es2_PatternMatch&CutV3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\s11es2_PatternMatch&CutV3.o" "..\\src\\s11es2_PatternMatch&CutV3.cpp" 
..\src\s11es2_PatternMatch&CutV3.cpp: In function 'doppialista* match2(nodo*, char*, int)':
..\src\s11es2_PatternMatch&CutV3.cpp:49:30: error: no matching function for call to 'doppialista::doppialista(nodo*&, nodo&)'
  return new doppialista(L1,L2);
                              ^
..\src\s11es2_PatternMatch&CutV3.cpp:11:2: note: candidate: doppialista::doppialista(nodo*, nodo*)
  doppialista(nodo* l1=0, nodo* l2=0){
  ^~~~~~~~~~~
..\src\s11es2_PatternMatch&CutV3.cpp:11:2: note:   no known conversion for argument 2 from 'nodo' to 'nodo*'
..\src\s11es2_PatternMatch&CutV3.cpp:9:8: note: candidate: constexpr doppialista::doppialista(const doppialista&)
 struct doppialista{nodo* listamatch, * restante;
        ^~~~~~~~~~~
..\src\s11es2_PatternMatch&CutV3.cpp:9:8: note:   candidate expects 1 argument, 2 provided
..\src\s11es2_PatternMatch&CutV3.cpp:9:8: note: candidate: constexpr doppialista::doppialista(doppialista&&)
..\src\s11es2_PatternMatch&CutV3.cpp:9:8: note:   candidate expects 1 argument, 2 provided

21:58:24 Build Finished (took 486ms)

